# Varkous

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
core/: Cargo.toml
core/src/: lib.rs
request_response/: Cargo.toml
request_response/src/: lib.rs
routers/: Cargo.toml
routers/src/: lib.rs
src/: main.rs
views/: error.html  home.html  simulacrum.html  wow.html
views/styles/: home.css
web_threads/: Cargo.toml
web_threads/src/: lib.rs
