[package]
name = "varkous-rust"
version = "0.1.0"
authors = ["Arclite"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
core = { path = "core" }
web_threads = { path = "web_threads" }
routers = { path = "routers" }
request_response = { path = "request_response"}
httparse = "1"